--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-success" role="alert">
-    <strong>User {{username}} registered successfully </strong>
+    <h3>User {{username}} registered successfully</h3>
 </div>
 
 <button class ="nav-link float-right">go to <a routerLink="users" href=""  (click)="goBacktoUsers()"><small>Users List</small></a></button>
