--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,41 +1,44 @@
 
-<div class="card rounded-0">
-  <div class="card-header">
+<div class="card rounded" style="border:none">
+  <div class="card-header border">
     <h3 class="mb-0">User Registration Form</h3>
   </div>
-  <div class="card-body">
+  <div class="card-body " style="background-color:#F2F2F2">
     <form class="form"  #addUserForm="ngForm">
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label" for="FirstName">First Name</label>
-        <div class="col-sm-10">
+        <label class="col-sm-3 col-form-label font-weight-bold" for="FirstName">First Name</label>
+        <div class="col-sm-7">
           <input id="FirstName" type="text" [(ngModel)]="registerUserData.FirstName" name="FirstName" class="form-control rounded" style="background-color:#F2F5A9" >
         </div>
       </div>
 
       <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="LastName">Last Name</label>
-          <div class="col-sm-10">
+          <label class="col-sm-3 col-form-label font-weight-bold" for="LastName">Last Name</label>
+          <div class="col-sm-7">
             <input id="LastName" type="text" [(ngModel)]="registerUserData.LastName" name="LastName" class="form-control rounded" style="background-color:#F2F5A9" required>
           </div>
       </div>
 
       <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="SSINo">SSINo</label>
-          <div class="col-sm-10">
+          <label class="col-sm-3 col-form-label font-weight-bold" for="SSINo">SSINo</label>
+          <div class="col-sm-7">
             <input id="SSINo" type="number" [(ngModel)]="registerUserData.SSINo" name="SSINo" class="form-control rounded" style="background-color:#F2F5A9" required>
           </div>
       </div> 
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
+        <label class="col-sm-3 col-form-label font-weight-bold">Email</label>
+        <div class="col-sm-7">
           <input id="Email" type="Email" [(ngModel)]="registerUserData.Email" name="Email" class="form-control rounded" style="background-color:#F2F5A9"   required>
         </div>
       </div>
 
+      <span>
+          <a class =" float-right" style="margin:5px" href="" (click)="resetForm()"><small>Cancel</small></a>
+          <a class ="float-right" style="margin:5px"> Or</a>
+          <button routerLink="success" type="button" (click)="addUser()" class="btn btn-primary float-right"><small>Register</small></button>
+      </span>
       
-      <a class ="nav-link float-right" href="" (click)="resetForm()">Cancel</a>
-      <button routerLink="success" type="button" (click)="addUser()" class="btn btn-primary float-right">Register</button>
     </form>
   </div>
   <!--/card-block-->
