--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class ="container shadow p-3 mb-5  rounded " style="padding-top:50px; background-color:#F2F2F2"  >
+<div class ="container p-3 mt-3 rounded " style="background-color:#f2f2f2; box-shadow: 0 0 20px #000" >
     <router-outlet></router-outlet> 
 </div>
