--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
     <div class="card-header ">
-        <h5 > List of Documents</h5>
+        <h4 > List of Documents</h4>
     </div>          
     <table class="table table-borderd">
         <thead></thead>
@@ -12,42 +12,47 @@
             <th>Description</th>
         </tr>
         <tbody>
-            <tr *ngFor="let doc of documents">
-                <td>1</td>
-                <td>{{doc.filename}}</td>
-                <td>{{doc.contentType}}</td>
-                <td>test</td>
-                <td><a><button type="button" class="btn btn-primary  btn-sm" style="width:100px" (click)="removeFromCart(cart.PurchaseID)" >Download</button></a></td>
-                <td><a><button type="button" class="btn btn-danger btn-sm" style="width:100px"  (click)="onEdit(cart)" >Delete</button></a></td>
-            
+            <tr *ngFor="let doc of documents; let i = index">
+                <td>{{i+1}}</td>
+                <td>{{doc.originalname}}</td>
+                <td>{{doc.mimetype}}</td>
+                <td>{{doc.description}}</td>
+                <td><a><button type="button" class="btn btn-success  btn-sm" style="width:100px;margin:5px" (click)="downloadFile(doc.filename, doc.originalname)" >Download</button></a>
+                    <a><button type="button" class="btn btn-danger btn-sm" style="width:100px;margin:5px"  (click)="deleteFile(doc.filename)" >Delete</button></a>
+                </td>
+                <!-- <td><a><button type="button" class="btn btn-danger btn-sm" style="width:100px"  (click)="deleteFile(doc.filename)" >Delete</button></a></td>            -->
         </tr>
-        </tbody>
-        
+        </tbody>      
     </table>
 </div>
 <br>
 
 <div class="card rounded-0">
     <div class="card-header">
-      <h5 >Upload New Document</h5>
+      <h4 >Upload New Document</h4>
     </div>
-    <div class="card-body" style="background-color: #ffccff">
-      <form class="form">
+    <div class="card-body" style="background-color: #ffe6cc">
+      
+      <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+
         <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="FirstName"><small>Upload a document</small></label>
+          <label class="col-sm-2 col-form-label font-weight-bold" for="file">Upload a document</label>
           <div class="col-sm-10">
-            <input id="FirstName" type="file" [(ngModel)]="registerUserData.FirstName" name="FirstName" class="form-control rounded" >
+            <input type="file" (change)="onSelectedFile($event)"  id="file" name="file" class="form-control rounded" style="height: 100%" >
           </div>
         </div>
   
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="LastName"><small>Description</small></label>
+            <label class="col-sm-2 col-form-label font-weight-bold" for="description">Description</label>
             <div class="col-sm-10">
-              <input id="LastName" type="text" [(ngModel)]="registerUserData.LastName" name="LastName" class="form-control rounded" >
+              <input id="description" type="text"  formControlName="description" class="form-control rounded" >
             </div>
         </div>
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary float-right">Upload</button>
+        </div>
         
-        <button routerLink="success" type="button" (click)="addUser()" class="btn btn-primary float-right">Upload</button>
       </form>
     </div>
     <!--/card-block-->
@@ -56,7 +61,9 @@
 <br>
 <div class="card">
         <div class="card-header">
-           <a routerLink="users" class ="nav-link" href="" (click)="goBacktoUsers()"><Small>Users List</Small></a>
+            <span>Go to
+           <a routerLink="users" href="" (click)="goBacktoUsers()"><Small>Users List</Small></a>
+        </span>
         </div>          
 </div>
 
