--- a/src/app/list-user/list-user.component.html
+++ b/src/app/list-user/list-user.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
     <div class="card-header">
-        List of Users
+        <h4>List of Users</h4>
     </div>          
     <table class="table table-borderd">
         <thead></thead>
@@ -26,7 +26,7 @@
 
 <div class="card">
         <div class="card-header">
-            <a routerLink="adduser" class ="nav-link" href="" (click)="goToAddUser()">Add New User</a>
+            <a routerLink="adduser" class ="nav-link" href="" (click)="goToAddUser()"><small>Add New User</small></a>
         </div>          
 </div>
 
